fix: too much head space on Profile on <540px

--- a/src/App.scss
+++ b/src/App.scss
@@ -204,7 +204,7 @@ body{
   }
   .UserProfile{
     position: relative;
-    top: 160px;
+    top: 80px;
   }
 }
 
